# lambdabot

./: .gitignore  .travis.yml  AUTHORS  AltTime.hs  BUGS  Binary.hs  Boot.hs  COMMANDS  COMMENTARY  COMMENTARY.md  Config.hs  DeepSeq.hs  DynModules.hs  ErrorUtils.hs  ExceptionError.hs  FastMutInt.lhs  File.hs  GenModules.hs  IRC.hs  IRCBase.hs  LBState.hs  LMain.hs  Lambdabot.hs  Main.hs  Makefile  Map.hs  Message.hs  MiniHTTP.hs  Modules.hs  NickEq.hs  Plugin.hs  PosixCompat.hs  Process.hs  README  README.md  Regex.hsc  STYLE  Serial.hs  Set.hs  TODO  (+18 more)
.travis/: build  install-deps
botpp/: BotLib.hs  BotPP.hs  botpp.cabal
brainfuck/: Examples.hs  Main.hs  brainfuck.cabal
brainfuck/Language/: Brainfuck.hs
lambdabot/: AUTHORS  BabelModule.hs  BaseModule.hs  Boot.hs  BotConfig.hs  CHANGELOG  COMMENTARY  COPYING  Changelog  ChessModule.hs  CmafiheModule.hs  Config.hs  DeepSeq.hs  DeepSeq.lhs  Depends.hs  DiceModule.hs  DictModule.hs  DummyModule.hs  DynamicModule.hs  ErrorUtils.hs  EvalModule.hs  ExceptionError.hs  FactModule.hs  GHCLibraryPath.hs.in  GHCiModule.hs  GenModules.hs  GenStaticModules.hs  GoogleModule.hs  HaddockModule.hs  HelloModule.hs  HelpModule.hs  IRC.hs  KarmaModule.hs  Main.hs  Makefile  Map.hs  MiniHTTP.hs  MonadException.hs  MoreModule.hs  ParsePkgConf.hs  (+36 more)
lambdabot-core/: AUTHORS.md  COMMENTARY.md  README.md  lambdabot-core.cabal  lambdabot.cabal
lambdabot-core/State/: djinn
lambdabot-core/main/: Modules.hs
lambdabot-core/src/: Lambdabot.hs
lambdabot-core/src/Lambdabot/: Bot.hs  ChanName.hs  Command.hs  Config.hs  File.hs  IRC.hs  Main.hs  Module.hs  Monad.hs  Monad.hs-boot  Nick.hs  OutputFilter.hs  Plugin.hs  State.hs  Util.hs
lambdabot-core/src/Lambdabot/Compat/: FreenodeNick.hs
lambdabot-core/src/Lambdabot/Config/: Core.hs
lambdabot-core/src/Lambdabot/Plugin/: Base.hs  Compose.hs  Core.hs  Dice.hs  Dict.hs  Djinn.hs  Dummy.hs  Free.hs  Fresh.hs  Help.hs  Karma.hs  OEIS.hs  OfflineRC.hs  Pretty.hs  Stats.hs  System.hs  Tell.hs  Ticker.hs  Type.hs  Version.hs
lambdabot-core/src/Lambdabot/Util/: Network.hs  Serial.hs  Signals.hs
lambdabot-haskell-plugins/: lambdabot-haskell-plugins.cabal
lambdabot-haskell-plugins/src/Lambdabot/Config/: Haskell.hs
lambdabot-haskell-plugins/src/Lambdabot/Plugin/: Check.hs  Eval.hs  Haddock.hs  Haskell.hs  Hoogle.hs  Instances.hs  Pretty.hs  Source.hs  Type.hs
lambdabot-haskell-plugins/src/Lambdabot/Util/: Parser.hs
lambdabot-irc-plugins/: lambdabot-irc-plugins.cabal
lambdabot-irc-plugins/src/Lambdabot/Config/: IRC.hs
lambdabot-irc-plugins/src/Lambdabot/Plugin/: IRC.hs  Log.hs  Topic.hs
lambdabot-misc-plugins/: lambdabot-misc-plugins.cabal
lambdabot-misc-plugins/src/Lambdabot/Plugin/: Fresh.hs  Hello.hs  Misc.hs  Todo.hs
lambdabot-novelty-plugins/: lambdabot-novelty-plugins.cabal
lambdabot-novelty-plugins/src/Lambdabot/Config/: Novelty.hs
lambdabot-novelty-plugins/src/Lambdabot/Plugin/: Elite.hs  Filter.hs  Karma.hs  Novelty.hs  Numberwang.hs  Slap.hs
lambdabot-reference-plugins/: Setup.hs  lambdabot-reference-plugins.cabal
lambdabot-social-plugins/: lambdabot-social-plugins.cabal
lambdabot-trusted/: LICENSE  Setup.lhs  lambdabot-trusted.cabal
lambdabot-trusted/src/: Trusted.hs
lambdabot-utils/: lambdabot-utils.cabal
lambdabot-utils/Lambdabot/: FixPrecedence.hs  MiniHTTP.hs  Pointful.hs  Process.hs  Signals.hs  Url.hs  Util.hs
lambdabot/BabelBot/: BabelFish.hs
lambdabot/DictModule/: DictLookup.hs
lambdabot/EvalModule/: ArithTerm.hs  LMEngine.hs  LMParser.hs  LambdaTerm.hs  LangPack.hs  ListTerm.hs  RelTerm.hs  tests.hs
lambdabot/PlModule/: Common.hs  Makefile  Parser.hs  PrettyPrinter.hs  Rules.hs  Set.hs  Test.hs  Transform.hs
lambdabot/Plugins/: Babel.hs  BabelModule.hs  Base.hs  BaseModule.hs  Dice.hs  DiceModule.hs  Dict.hs  DictModule.hs  Dummy.hs  DummyModule.hs  Dynamic.hs  DynamicModule.hs  EvalModule.hs  Fact.hs  FactModule.hs  Haddock.hs  HaddockModule.hs  Hello.hs  HelloModule.hs  Help.hs  HelpModule.hs  Karma.hs  KarmaModule.hs  Lambda.hs  MoreModule.hs  Pl.hs  PlModule.hs  Plugs.hs  PlugsModule.hs  QuoteModule.hs  Search.hs  SearchModule.hs  Seen.hs  SeenModule.hs  Spell.hs  SpellModule.hs  State.hs  StateModule.hs  System.hs  SystemModule.hs  (+7 more)
lambdabot/Plugins/DictModule/: DictLookup.hs
lambdabot/Plugins/EvalModule/: ArithTerm.hs  COPYING  LMEngine.hs  LMParser.hs  LambdaTerm.hs  LangPack.hs  ListTerm.hs  RelTerm.hs  tests.hs
lambdabot/Plugins/Lambda/: LambdaTerm.hs  LangPack.hs  RelTerm.hs  tests.hs
lambdabot/Plugins/Pl/: Common.hs  Makefile  Parser.hs  PrettyPrinter.hs  Rules.hs  Test.hs  Transform.hs
lambdabot/Plugins/PlModule/: Common.hs  Parser.hs  PrettyPrinter.hs  Rules.hs  Test.hs  Transform.hs
lambdabot/Plugins/Quote/: Fortune.hs
lambdabot/Plugins/QuoteModule/: Fortune.hs
lambdabot/Plugins/Vixen/: Vixen.hs
lambdabot/PlugsModule/: RunPlugs.hs
lambdabot/QuoteModule/: Fortune.hs  Random.hs  Yow.hs
lambdabot/State/: L.hs  Pristine.hs.706  Pristine.hs.708  Pristine.hs.default  babel  eval  haddock  karma  lambda  source
lambdabot/data/: vixenrc
lambdabot/scripts/: GenHaddock.hs  RunPlugs.hs  channels.rc  genhaddock.sh  ignores.rc  online.rc  passwd.rc.sample
lambdabot/scripts/online/: admins.rc  channels.rc  ignores.rc  loop  online.rc  run-offline.sh  run.sh  setup-screen-session
lambdabot/scripts/vim/: README  bot  pl  typeOf
lambdabot/src/: Main.hs  Modules.hs
scripts/Djinn/: Djinn.hs  HCheck.hs  HTypes.hs  Help.hs  LICENSE  LJT.hs  LJTFormula.hs  LJTParse.hs  MJ.hs  MLJT.hs  Makefile  MonadBFS.hs  NEWS  Poly.hs  REPL.hs  Setup.lhs  TODO  Util.hs  djinn  djinn.cabal  examples  examples.out  ljt.p  verbose-help
scripts/Djinn/Util/: Digraph.hs  Sort.hs
scripts/Djinn/tests/: Makefile  Test.hs  testfiles.all  testfiles.fast
scripts/lambda/: LambdaShell.cabal  README
scripts/lambda/src/: Env.hs  Lambda.hs  LambdaCmdLine.hs  LambdaParser.hs  LambdaShell.hs  Version.hs  main.hs
show/: ShowFun.hs  ShowQ.hs  SimpleReflect.hs  show.cabal
unlambda/: Main.hs  unlambda.cabal
unlambda/Language/: Unlambda.hs
(+616 files in other folders)
