name:                   lambdabot
version:                4.3

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC==7.4.1

extra-source-files:     AUTHORS
                        BUGS
                        COMMANDS
                        COMMENTARY
                        README
                        STYLE
                        TODO
                        scripts/ghci.sh
                        scripts/vim/bot
                        scripts/vim/pl
                        scripts/vim/README
                        scripts/vim/run
                        scripts/vim/runwith
                        scripts/vim/typeOf
                        lambdabot-trusted/lambdabot-trusted.cabal
                        lambdabot-trusted/Setup.lhs
                        lambdabot-trusted/src/*.hs
                        src/*.hs,
                        src/*.hs-boot

data-files:             scripts/online.rc,
                        State/djinn,
                        State/fresh,
                        State/haddock,
                        State/karma,
                        State/L.hs,
                        State/poll,
                        State/Pristine.hs,
                        State/quote,
                        State/seen,
                        State/source,
                        State/tell,
                        State/todo,
                        State/url,
                        State/vixen,
                        State/where

source-repository head
  type:                 git
  location:             https://github.com/mokus0/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -fno-warn-incomplete-patterns
                        -fno-warn-missing-methods
                        -fno-warn-orphans
                        -funbox-strict-fields
                        -fwarn-unused-imports
  exposed-modules:      Lambdabot
                        Lambdabot.AltTime
                        Lambdabot.Command
                        Lambdabot.Error
                        Lambdabot.File
                        Lambdabot.IRC
                        Lambdabot.Message
                        Lambdabot.MiniHTTP
                        Lambdabot.Module
                        Lambdabot.Monad
                        Lambdabot.NickEq
                        Lambdabot.Parser
                        Lambdabot.Pointful
                        Lambdabot.Process
                        Lambdabot.Regex
                        Lambdabot.Serial
                        Lambdabot.Shared
                        Lambdabot.Signals
                        Lambdabot.State
                        Lambdabot.Url
                        Lambdabot.Util
                        LMain
                        Paths_lambdabot
                        Plugin
                        Plugin.Activity
                        Plugin.Base
                        Plugin.BF
                        Plugin.Check
                        Plugin.Compose
                        Plugin.Dice
                        Plugin.Dict
                        Plugin.Djinn
                        Plugin.Dummy
                        Plugin.Dynamic
                        Plugin.Elite
                        Plugin.Eval
                        Plugin.Filter
                        Plugin.Free
                        Plugin.Fresh
                        Plugin.Haddock
                        Plugin.Hello
                        Plugin.Help
                        Plugin.Hoogle
                        Plugin.Instances
                        Plugin.IRC
                        Plugin.Karma
                        Plugin.Localtime
                        Plugin.Log
                        Plugin.More
                        Plugin.Numberwang
                        Plugin.OEIS
                        Plugin.OfflineRC
                        Plugin.Pl
                        Plugin.Pointful
                        Plugin.Poll
                        Plugin.Pretty
                        Plugin.Quote
                        Plugin.Search
                        Plugin.Seen
                        Plugin.Slap
                        Plugin.Source
                        Plugin.Spell
                        Plugin.Stats
                        Plugin.System
                        Plugin.Tell
                        Plugin.Ticker
                        Plugin.Todo
                        Plugin.Topic
                        Plugin.Type
                        Plugin.Undo
                        Plugin.Unlambda
                        Plugin.UnMtl
                        Plugin.Url
                        Plugin.Version
                        Plugin.Vixen
                        Plugin.Where
                        
  other-modules:        Config
                        Plugin.Dict.DictLookup
                        Plugin.Dummy.DocAssocs
                        Plugin.Free.Expr
                        Plugin.Free.FreeTheorem
                        Plugin.Free.Parse
                        Plugin.Free.Test
                        Plugin.Free.Theorem
                        Plugin.Free.Type
                        Plugin.Free.Util
                        Plugin.Pl.Common
                        Plugin.Pl.Names
                        Plugin.Pl.Optimize
                        Plugin.Pl.Parser
                        Plugin.Pl.PrettyPrinter
                        Plugin.Pl.RuleLib
                        Plugin.Pl.Rules
                        Plugin.Pl.Transform
                        Plugin.Seen.StopWatch
  build-depends:        array                >= 0.4.0.0    ,
                        base                 >= 4.4        ,
                        binary               >= 0.5.1.0    ,
                        bytestring           >= 0.9.2.1    ,
                        containers           >= 0.4.2.1    ,
                        dice                 >= 0.1        ,
                        directory            >= 1.1.0.2    ,
                        filepath             >= 1.3.0.0    ,
                        haskeline            >= 0.7        ,
                        haskell-src-exts     >= 1.12.0     ,
                        hstatsd              >= 0.1        ,
                        HTTP                 >= 4000.2.2   ,
                        misfortune           >= 0.1        ,
                        mtl                  >= 2.1        ,
                        network              >= 2.3.0.13   ,
                        oeis                 >= 0.3.1      ,
                        old-time             >= 1.1.0.0    ,
                        parsec               >= 3.1.2      ,
                        pretty               >= 1.1.1.0    ,
                        process              >= 1.1.0.1    ,
                        random               >= 1.0.1.1    ,
                        random-fu            >= 0.2.2.0    ,
                        random-source        >= 0.3.0.2    ,
                        regex-compat         >= 0.95.1     ,
                        regex-posix          >= 0.95.1     ,
                        show                 >= 0.4.1.2    ,
                        syb                  >= 0.3.6      ,
                        tagsoup              >= 0.12.6     ,
                        template-haskell     >= 2.7.0.0    ,
                        unix                 >= 2.5.1      ,
                        utf8-string          >= 0.3.7      ,
                        zlib                 >= 0.5.3.1    ,
                        
                        -- runtime dependencies - for eval etc.
                        arrows               >= 0.4.4.0    ,
                        brainfuck            == 0.1        ,
                        data-memocombinators >= 0.4.4      ,
                        hoogle               >= 4.2.10     ,
                        IOSpec               >= 0.2.5      ,
                        logict               >= 0.5.0.1    ,
                        MonadRandom          >= 0.1.8      ,
                        --mueval               >= 0.8.2      ,
                        numbers              >= 3000.0.0.0 ,
                        unlambda             >= 0.1        ,
                        vector-space         >= 0.8.0

executable lambdabot
  hs-source-dirs:       main
  main-is:              Main.hs

  ghc-options:          -Wall -threaded
  build-depends:        base                 >= 3 && < 5,
                        lambdabot,
                        unix                 >= 2.5.1
                        