name:                   lambdabot
version:                4.3

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC==7.4.1

extra-source-files:     AUTHORS
                        BUGS
                        COMMANDS
                        COMMENTARY
                        README
                        STYLE
                        TODO
                        scripts/ghci.sh
                        scripts/vim/bot
                        scripts/vim/pl
                        scripts/vim/README
                        scripts/vim/run
                        scripts/vim/runwith
                        scripts/vim/typeOf
                        lambdabot-trusted/lambdabot-trusted.cabal
                        lambdabot-trusted/Setup.lhs
                        lambdabot-trusted/src/*.hs
                        src/*.hs,
                        src/*.hs-boot
                        src/Lambdabot/Plugin/Free/Test.hs

data-files:             scripts/online.rc,
                        State/djinn,
                        State/fresh,
                        State/haddock,
                        State/karma,
                        State/L.hs,
                        State/poll,
                        State/Pristine.hs,
                        State/quote,
                        State/seen,
                        State/source,
                        State/tell,
                        State/todo,
                        State/url,
                        State/vixen,
                        State/where

source-repository head
  type:                 git
  location:             https://github.com/mokus0/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -fno-warn-incomplete-patterns
                        -fno-warn-missing-methods
                        -fno-warn-orphans
                        -funbox-strict-fields
                        -fwarn-unused-imports
                        -fwarn-unused-binds
  
  exposed-modules:      Lambdabot
                        Lambdabot.ChanName
                        Lambdabot.Command
                        Lambdabot.Config
                        Lambdabot.Config.Core
                        Lambdabot.File
                        Lambdabot.IRC
                        Lambdabot.Main
                        Lambdabot.Message
                        Lambdabot.Module
                        Lambdabot.Monad
                        Lambdabot.Nick
                        Lambdabot.NickEq
                        Lambdabot.Plugin
                        Lambdabot.Plugin.Activity
                        Lambdabot.Plugin.Base
                        Lambdabot.Plugin.BF
                        Lambdabot.Plugin.Check
                        Lambdabot.Plugin.Compose
                        Lambdabot.Plugin.Dice
                        Lambdabot.Plugin.Dict
                        Lambdabot.Plugin.Djinn
                        Lambdabot.Plugin.Dummy
                        Lambdabot.Plugin.Elite
                        Lambdabot.Plugin.Eval
                        Lambdabot.Plugin.Eval.Trusted
                        Lambdabot.Plugin.Filter
                        Lambdabot.Plugin.Free
                        Lambdabot.Plugin.Fresh
                        Lambdabot.Plugin.Haddock
                        Lambdabot.Plugin.Hello
                        Lambdabot.Plugin.Help
                        Lambdabot.Plugin.Hoogle
                        Lambdabot.Plugin.Instances
                        Lambdabot.Plugin.IRC
                        Lambdabot.Plugin.Karma
                        Lambdabot.Plugin.Localtime
                        Lambdabot.Plugin.Log
                        Lambdabot.Plugin.More
                        Lambdabot.Plugin.Numberwang
                        Lambdabot.Plugin.OEIS
                        Lambdabot.Plugin.OfflineRC
                        Lambdabot.Plugin.Pl
                        Lambdabot.Plugin.Pointful
                        Lambdabot.Plugin.Poll
                        Lambdabot.Plugin.Pretty
                        Lambdabot.Plugin.Quote
                        Lambdabot.Plugin.Search
                        Lambdabot.Plugin.Seen
                        Lambdabot.Plugin.Slap
                        Lambdabot.Plugin.Source
                        Lambdabot.Plugin.Spell
                        Lambdabot.Plugin.Stats
                        Lambdabot.Plugin.System
                        Lambdabot.Plugin.Tell
                        Lambdabot.Plugin.Ticker
                        Lambdabot.Plugin.Todo
                        Lambdabot.Plugin.Topic
                        Lambdabot.Plugin.Type
                        Lambdabot.Plugin.Undo
                        Lambdabot.Plugin.Unlambda
                        Lambdabot.Plugin.UnMtl
                        Lambdabot.Plugin.Url
                        Lambdabot.Plugin.Version
                        Lambdabot.Plugin.Vixen
                        Lambdabot.Plugin.Where
                        Lambdabot.State
                        Lambdabot.Util
                        Lambdabot.Util.AltTime
                        Lambdabot.Util.Error
                        Lambdabot.Util.MiniHTTP
                        Lambdabot.Util.Parser
                        Lambdabot.Util.Process
                        Lambdabot.Util.Serial
                        Lambdabot.Util.Signals
                        Lambdabot.Util.Url
  
  other-modules:        Paths_lambdabot
                        Lambdabot.Plugin.Dict.DictLookup
                        Lambdabot.Plugin.Dummy.DocAssocs
                        Lambdabot.Plugin.Free.Expr
                        Lambdabot.Plugin.Free.FreeTheorem
                        Lambdabot.Plugin.Free.Parse
                        Lambdabot.Plugin.Free.Theorem
                        Lambdabot.Plugin.Free.Type
                        Lambdabot.Plugin.Free.Util
                        Lambdabot.Plugin.Pl.Common
                        Lambdabot.Plugin.Pl.Names
                        Lambdabot.Plugin.Pl.Optimize
                        Lambdabot.Plugin.Pl.Parser
                        Lambdabot.Plugin.Pl.PrettyPrinter
                        Lambdabot.Plugin.Pl.RuleLib
                        Lambdabot.Plugin.Pl.Rules
                        Lambdabot.Plugin.Pl.Transform
                        Lambdabot.Plugin.Seen.StopWatch
                        Lambdabot.Plugin.Seen.UserStatus
  
  build-depends:        array                   >= 0.4.0.0    ,
                        base                    >= 4.4        ,
                        binary                  >= 0.5.1.0    ,
                        bytestring              >= 0.9.2.1    ,
                        containers              >= 0.4.2.1    ,
                        dependent-map           == 0.1.*      ,
                        dependent-sum           == 0.2.*      ,
                        dependent-sum-template  >= 0.0.0.1    ,
                        dice                    >= 0.1        ,
                        directory               >= 1.1.0.2    ,
                        edit-distance           >= 0.2        ,
                        filepath                >= 1.3.0.0    ,
                        haskeline               >= 0.7        ,
                        haskell-src-exts        >= 1.12.0     ,
                        hstatsd                 >= 0.1        ,
                        HTTP                    >= 4000.2.2   ,
                        misfortune              >= 0.1        ,
                        mtl                     >= 2.1        ,
                        network                 >= 2.3.0.13   ,
                        oeis                    >= 0.3.1      ,
                        time                    >= 1.4        ,
                        parsec                  >= 3.1.2      ,
                        pretty                  >= 1.1.1.0    ,
                        process                 >= 1.1.0.1    ,
                        QuickCheck              >= 2          ,
                        random                  >= 1.0.1.1    ,
                        random-fu               >= 0.2.2.0    ,
                        random-source           >= 0.3.0.2    ,
                        regex-tdfa              >= 1.1        ,
                        SafeSemaphore           >= 0.9        ,
                        show                    >= 0.4.1.2    ,
                        split                   >= 0.2        ,
                        syb                     >= 0.3.6      ,
                        tagsoup                 >= 0.12.6     ,
                        template-haskell        >= 2.7.0.0    ,
                        unix                    >= 2.5.1      ,
                        utf8-string             >= 0.3.7      ,
                        zlib                    >= 0.5.3.1    ,
                        
                        -- runtime dependencies - for eval etc.
                        arrows                  >= 0.4.4.0    ,
                        brainfuck               == 0.1        ,
                        data-memocombinators    >= 0.4.4      ,
                        hoogle                  >= 4.2.10     ,
                        IOSpec                  >= 0.2.5      ,
                        logict                  >= 0.5.0.1    ,
                        MonadRandom             >= 0.1.8      ,
                        --mueval                  >= 0.8.2      ,
                        numbers                 >= 3000.0.0.0 ,
                        unlambda                >= 0.1        ,
                        vector-space            >= 0.8.0

executable lambdabot
  hs-source-dirs:       main
  main-is:              Main.hs

  ghc-options:          -Wall -threaded
  build-depends:        base                 >= 3 && < 5,
                        lambdabot,
                        unix                 >= 2.5.1
                        