name:                   lambdabot
version:                4.3.0.1

license:                GPL
license-file:           LICENSE

author:                 Don Stewart
maintainer:             James Cook <mokus@deepbondi.net>

category:               Development, Web
synopsis:               Lambdabot is a development tool and advanced IRC bot
description:            Lambdabot is an IRC bot written over several years by
                        those on the #haskell IRC channel.
                        .
                        It operates as a command line tool, embedded in an editor,
                        embedded in GHCi, via internet relay chat and on the web.

homepage:               http://haskell.org/haskellwiki/Lambdabot

build-type:             Simple
cabal-version:          >= 1.8
tested-with:            GHC==7.4.1, GHC == 7.6.3

extra-source-files:     AUTHORS.md
                        COMMANDS
                        COMMENTARY.md
                        README.md
                        main/Modules.hs
                        scripts/ghci.sh
                        scripts/vim/bot
                        scripts/vim/pl
                        scripts/vim/README
                        scripts/vim/run
                        scripts/vim/runwith
                        scripts/vim/typeOf
                        src/Lambdabot/Plugin/Free/Test.hs

data-files:             scripts/online.rc,
                        State/djinn,
                        State/haddock,
                        State/L.hs,
                        State/Pristine.hs,
                        State/source,
                        State/vixen

source-repository head
  type:                 git
  location:             https://github.com/mokus0/lambdabot.git

library
  hs-source-dirs:       src
  ghc-options:          -Wall
                        -funbox-strict-fields

  exposed-modules:      Lambdabot
                        Lambdabot.ChanName
                        Lambdabot.Command
                        Lambdabot.Compat.AltTime
                        Lambdabot.Compat.FreenodeNick
                        Lambdabot.Compat.PackedNick
                        Lambdabot.Config
                        Lambdabot.Config.Core
                        Lambdabot.File
                        Lambdabot.IRC
                        Lambdabot.Logging
                        Lambdabot.Main
                        Lambdabot.Message
                        Lambdabot.Module
                        Lambdabot.Monad
                        Lambdabot.Nick
                        Lambdabot.NickEq
                        Lambdabot.OutputFilter
                        Lambdabot.Plugin
                        Lambdabot.Plugin.Activity
                        Lambdabot.Plugin.Base
                        Lambdabot.Plugin.BF
                        Lambdabot.Plugin.Check
                        Lambdabot.Plugin.Check.ShowQ
                        Lambdabot.Plugin.Compose
                        Lambdabot.Plugin.Dice
                        Lambdabot.Plugin.Dict
                        Lambdabot.Plugin.Djinn
                        Lambdabot.Plugin.Dummy
                        Lambdabot.Plugin.Elite
                        Lambdabot.Plugin.Error
                        Lambdabot.Plugin.Eval
                        Lambdabot.Plugin.Eval.Trusted
                        Lambdabot.Plugin.Filter
                        Lambdabot.Plugin.Free
                        Lambdabot.Plugin.Fresh
                        Lambdabot.Plugin.Haddock
                        Lambdabot.Plugin.Hello
                        Lambdabot.Plugin.Help
                        Lambdabot.Plugin.Hoogle
                        Lambdabot.Plugin.Instances
                        Lambdabot.Plugin.IRC
                        Lambdabot.Plugin.Karma
                        Lambdabot.Plugin.Localtime
                        Lambdabot.Plugin.Log
                        Lambdabot.Plugin.More
                        Lambdabot.Plugin.Numberwang
                        Lambdabot.Plugin.OEIS
                        Lambdabot.Plugin.OfflineRC
                        Lambdabot.Plugin.Pl
                        Lambdabot.Plugin.Pointful
                        Lambdabot.Plugin.Poll
                        Lambdabot.Plugin.Pretty
                        Lambdabot.Plugin.Quote
                        Lambdabot.Plugin.Search
                        Lambdabot.Plugin.Seen
                        Lambdabot.Plugin.Slap
                        Lambdabot.Plugin.Source
                        Lambdabot.Plugin.Spell
                        Lambdabot.Plugin.Stats
                        Lambdabot.Plugin.System
                        Lambdabot.Plugin.Tell
                        Lambdabot.Plugin.Ticker
                        Lambdabot.Plugin.Todo
                        Lambdabot.Plugin.Topic
                        Lambdabot.Plugin.Type
                        Lambdabot.Plugin.Undo
                        Lambdabot.Plugin.Unlambda
                        Lambdabot.Plugin.UnMtl
                        Lambdabot.Plugin.Url
                        Lambdabot.Plugin.Version
                        Lambdabot.Plugin.Vixen
                        Lambdabot.Plugin.Where
                        Lambdabot.State
                        Lambdabot.Util
                        Lambdabot.Util.Browser
                        Lambdabot.Util.Parser
                        Lambdabot.Util.Process
                        Lambdabot.Util.Serial
                        Lambdabot.Util.Signals

  other-modules:        Paths_lambdabot
                        Lambdabot.Plugin.Dict.DictLookup
                        Lambdabot.Plugin.Dummy.DocAssocs
                        Lambdabot.Plugin.Free.Expr
                        Lambdabot.Plugin.Free.FreeTheorem
                        Lambdabot.Plugin.Free.Parse
                        Lambdabot.Plugin.Free.Theorem
                        Lambdabot.Plugin.Free.Type
                        Lambdabot.Plugin.Free.Util
                        Lambdabot.Plugin.Pl.Common
                        Lambdabot.Plugin.Pl.Names
                        Lambdabot.Plugin.Pl.Optimize
                        Lambdabot.Plugin.Pl.Parser
                        Lambdabot.Plugin.Pl.PrettyPrinter
                        Lambdabot.Plugin.Pl.RuleLib
                        Lambdabot.Plugin.Pl.Rules
                        Lambdabot.Plugin.Pl.Transform
                        Lambdabot.Plugin.Seen.StopWatch
                        Lambdabot.Plugin.Seen.UserStatus

  build-depends:        array                   >= 0.4,
                        base                    >= 4.4,
                        binary                  >= 0.5,
                        bytestring              >= 0.9,
                        containers              >= 0.4,
                        dependent-map           == 0.1.*,
                        dependent-sum           == 0.2.*,
                        dependent-sum-template  >= 0.0.0.1,
                        dice                    >= 0.1,
                        directory               >= 1.1,
                        edit-distance           >= 0.2,
                        filepath                >= 1.3,
                        haskeline               >= 0.7,
                        haskell-src-exts        >= 1.14.0,
                        hstatsd                 >= 0.1,
                        hslogger                >= 1.2.1,
                        HTTP                    >= 4000,
                        lifted-base             >= 0.2,
                        misfortune              >= 0.1,
                        monad-control           >= 0.3,
                        mtl                     >= 2,
                        network                 >= 2.3.0.13,
                        oeis                    >= 0.3.1,
                        time                    >= 1.4,
                        parsec                  >= 3,
                        pretty                  >= 1.1,
                        process                 >= 1.1,
                        QuickCheck              >= 2,
                        random                  >= 1,
                        random-fu               >= 0.2,
                        random-source           >= 0.3,
                        regex-tdfa              >= 1.1,
                        SafeSemaphore           >= 0.9,
                        show                    >= 0.4,
                        split                   >= 0.2,
                        syb                     >= 0.3,
                        tagsoup                 >= 0.12,
                        template-haskell        >= 2.7,
                        transformers            >= 0.2,
                        transformers-base       >= 0.4,
                        unix                    >= 2.5,
                        utf8-string             >= 0.3,
                        zlib                    >= 0.5,

                        -- runtime dependencies - for eval etc.
                        arrows                  >= 0.4,
                        brainfuck               == 0.1,
                        data-memocombinators    >= 0.4,
                        hoogle                  >= 4.2,
                        IOSpec                  >= 0.2,
                        logict                  >= 0.5,
                        MonadRandom             >= 0.1,
                        mueval                  >= 0.9,
                        numbers                 >= 3000,
                        unlambda                >= 0.1,
                        vector-space            >= 0.8

executable lambdabot
  hs-source-dirs:       main
  main-is:              Main.hs

  ghc-options:          -Wall -threaded
  build-depends:        base                 >= 3 && < 5,
                        lambdabot
